<resources>
    <string name="app_name">蔓心宿公寓</string>
    <string name="tab_home">首页</string>
    <string name="tab_activity">活动</string>
    <string name="tab_assistant">行程助手</string>
    <string name="hour_room">体验房</string>
    <string name="day_room">短租房</string>
    <string name="tab_me">我的</string>
    <string name="my_location">我的位置</string>
    <string name="stay_in">入住</string>
    <string name="total_night">共%d晚</string>
    <string name="month_day">%1$d月%2$d日</string>
    <string name="location_branch_name">位置/品牌/公寓名称</string>
    <string name="search_hotel">查找公寓</string>
    <string name="stay_out">离店</string>
    <string name="do_later">正在开发中..敬请期待</string>


    <!--城市选择-->
    <string name="nothing_found">没有找到城市</string>
    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="city_single">市</string>
    <string name="start_your_tarvel">开启您的旅行</string>
    <string name="double_click_exit">再按一次退出</string>
    <string name="score_unit">分</string>
    <string name="order_imm">立即预订</string>
    <string name="hotel_detail">公寓详情</string>
    <string name="seek_hotel">咨询公寓</string>
    <string name="type_normal_room">普通房</string>
    <string name="tag_start">起</string>
    <string name="door_price">(门市价)</string>
    <string name="ticket">优惠劵</string>
    <string name="net_price">网客价</string>
    <string name="pre_order">预订</string>
    <string name="type_stand_room">标准房</string>
    <string name="score_rate">%s好评</string>
    <string name="look_for_all_comments">查看全部评论</string>
    <string name="hotel_comment">公寓评价</string>
    <string name="good_commend">好评</string>
    <string name="all_commend">全部</string>
    <string name="middle_commend">中评</string>
    <string name="bad_commend">差评</string>
    <string name="hotel_enquiment">公寓设施</string>
    <string name="call_phone_info">咨询公寓(%s)</string>
    <string name="hotel_introduce">公寓介绍</string>
    <string name="use_baidu_nav">使用百度地图导航</string>
    <string name="use_gaode_nav">使用高德地图导航</string>
    <string name="not_install_baidumap">未安装百度地图</string>
    <string name="not_install_gaodemap">未安装高德地图</string>
    <string name="check_location_is_right">无法定位到当前位置</string>
    <string name="detail">明细</string>
    <string name="confirm_order">确认预定</string>
    <string name="about_app">关于蔓心宿</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="birth">出生日期</string>
    <string name="email">邮箱</string>
    <string name="id_card">证件号码</string>
    <string name="phone">手机</string>
    <string name="keep_your_secret">蔓心宿承诺：妥善保护您的隐私信息</string>
    <string name="email_not_empty">未填写邮箱</string>
    <string name="edit_success">修改成功</string>
    <string name="name_not_empty">未填写姓名</string>
    <string name="email_not_regex">邮箱格式错误</string>
    <string name="card_not_regex">身份证格式错误</string>
    <string name="personal_info">个人资料</string>
    <string name="add_person">+ 新增常用旅客</string>
    <string name="common_info">常用信息</string>
    <string name="save">保存</string>
    <string name="select_card_type">选择证件类型</string>
    <string name="people_card">居民身份证</string>
    <string name="people_passport">其他证件</string>
    <string name="phone_not_empty">未填写手机号</string>
    <string name="edit_people_info">编辑常用旅客</string>
    <string name="delet">删除</string>
    <string name="delet_success">已删除</string>
    <string name="all_orders">全部订单</string>
    <string name="wait_comments">待评价</string>
    <string name="order_detail">订单详情</string>
    <string name="ticket_not_user">未使用</string>
    <string name="ticket_used">已使用</string>
    <string name="ticket_outdate">已过期</string>
    <string name="integral">积分</string>
    <string name="integral_detail">积分详情</string>
    <string name="recharge">充值</string>
    <string name="money_package">钱包</string>
    <string name="wx_pay">微信支付</string>
    <string name="wx_pay_tips">推荐安装微信5.0及以上版本的用户使用</string>
    <string name="ali_pay">支付宝</string>
    <string name="ali_pay_tips">推荐有支付宝账户的用户使用</string>
    <string name="pay_immediately">立即支付</string>
    <string name="recharge_deal">点击立即充值，即表示已同意《冲返活动协议》</string>
    <string name="recharge_now">立即充值</string>
    <string name="no_select_deposit">未选择充值金额</string>
    <string name="pay_success">支付成功</string>
    <string name="back_app">返回蔓心宿</string>
    <string name="balance_detail">余额明细</string>
    <string name="cost_detail">消费明细</string>
    <string name="recharge_detail">充值明细</string>
    <string name="balance_pay_tips">钱包余额%s元</string>
    <string name="balance_pay">钱包支付</string>
    <string name="pay">支付</string>
    <string name="pay_tips">点击确定支付后，不能再次修改优惠劵，确定要继续支付吗？</string>
    <string name="conpon">优惠券</string>
    <string name="onlynum_english">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_success">登录成功</string>
    <string name="exit_app">退出登录</string>
    <string name="login_out_success">已退出</string>
    <string name="login">登录</string>
    <string name="no_login">未登录</string>
    <string name="trip_history">历史行程</string>
    <string name="no_phone">号码不能为空</string>
    <string name="phone_regex">手机格式不正确</string>
    <string name="dynaic_password_login">动态密码登录</string>
    <string name="no_password">密码不能为空</string>
    <string name="regex_password">密码为4-20位字母、数字或字符</string>
    <string name="seconds_later_restart">%ds后重新获取</string>
    <string name="send_msg">发送验证码</string>
    <string name="code_no">请输入动态密码</string>
    <string name="regex_code">动态密码格式不正确</string>
    <string name="reset_password_success">已重置密码</string>
    <string name="no_name">姓名不能为空</string>
    <string name="regiseter_success">注册成功</string>
    <string name="no_code">验证码不能为空</string>
    <string name="no_more_than_five">不能超过5天</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="can_not_select_before_today">今天之前不能选哦</string>
    <string name="select_date">日期</string>
    <string name="fill_order">填写订单</string>
    <string name="no_phone_card">手机号、卡号不能为空</string>
    <string name="phone_card_regex">手机号、卡号格式不正确</string>
    <string name="code_success">短信发送成功</string>
    <string name="copy_right">福州蔓联盟网络科技有限公司\nCopyright@2017 manxinsu.com，All Rights Reserved</string>
    <string name="custome_phone">13075821312</string>
    <string name="search_text_mix">%1$d月%2$d - %3$d月%4$d  共%5$d天</string>
    <string name="search_text_single">%1$d月%2$d</string>
    <string name="student_card">学生证</string>
    <string name="add_success">添加成功</string>
    <string name="no_net_data">无网络数据</string>
    <string name="no_card_num">未填写证件号</string>
    <string name="charge_money_tips">充%s元</string>
    <string name="gift_money_tips">赠送%s元</string>
    <string name="left_room_tips">仅剩%s间客房</string>
    <string name="hotel_child_price_tips">原价%s元</string>
    <string name="empty_data_tips">暂无数据</string>
    <string name="update_success">修改成功</string>
    <string name="not_more_than_ten_breakfaseter">超过10份早餐啦</string>
    <string name="please_select_arrive_time">请选择到店时间</string>
    <string name="unit_rmb">¥</string>
    <string name="hotel_orders">公寓订单</string>
    <string name="cancle_order_tips">取消订单只能退回50%的费用，确定要取消订单吗？</string>
    <string name="cancle_reason">取消原因</string>
    <string name="no_commend_to_submit">您未填写任何评论</string>
    <string name="my_commend">我的点评</string>
    <string name="do_over">已完成选房</string>
    <string name="zero_time_tips">"您是否需要预定凌晨房？\n 凌晨入住、当天退房"</string>
</resources>
