<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="apartment.wisdom.com.activities.RechagerActivity">

    <include layout="@layout/cp_common_title_bar" />

    <TextView
        android:text="充值金额"
        android:layout_width="match_parent"
        android:textColor="@color/activity_tv"
        android:textSize="@dimen/text_normal_up"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="选择支付方式"
        android:layout_width="match_parent"
        android:textColor="@color/activity_tv"
        android:textSize="@dimen/text_normal_up"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:id="@+id/rl_pay_alipay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/iv_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/alipay_ic" />

        <TextView
            android:id="@+id/tv_alipay_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_alipay"
            android:text="@string/ali_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_alipay_tittle"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_alipay"
            android:text="@string/ali_pay_tips"
            android:textColor="@color/activity_info"
            android:textSize="@dimen/text_normal_down" />

        <ImageView
            android:id="@+id/iv_select_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/continue_rb_check_theme"
           />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_pay_wx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/iv_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/wechat_ic" />

        <TextView
            android:id="@+id/tv_wx_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_wx"
            android:text="@string/wx_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_wx_tittle"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_wx"
            android:text="@string/wx_pay_tips"
            android:textColor="@color/activity_info"
            android:textSize="@dimen/text_normal_down" />

        <ImageView
            android:id="@+id/iv_select_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/continue_rb_uncheck_theme" />
    </RelativeLayout>



    <TextView
        android:id="@+id/tv_recharge"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        android:gravity="center"
        style="@style/BtnNomalStyle"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:text="@string/recharge_now"
        android:padding="@dimen/image_padding_big"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorAccent"
        android:text="@string/recharge_deal"
        android:layout_marginTop="@dimen/image_padding_big"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />






</LinearLayout>